most functionality completed

--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,9 @@
     <script src="js/studentProfileCtrl.js"></script>
     <script src="js/adminProfileCtrl.js"></script>
     <script src="js/adminstudentCtrl.js"></script>
-      <script src="js/studentService.js"></script>
-      <script src="js/adminService.js"></script>
+    <script src="js/studentService.js"></script>
+    <script src="js/adminService.js"></script>
+    <script src="js/loginService.js"></script>
   </head>
   <body ng-app="ionicGDM">
       
